# rsf-cli

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  example.csv  ranked_output.csv
src/: errors.rs  main.rs  ranking.rs
